[package]
name = "open-era-api" # This can remain as the name of your package.
version = "0.1.0"
edition = "2021"

[lib]
name = "open_era_api"
path = "src/lib.rs"


[[bin]]
name = "bootstrap" # Ensure the binary is named bootstrap.
path = "src/main.rs" # Specify the path to your main.rs file.

[dependencies]
lambda_runtime = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
openai_api_rust = "0.1.9"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.22.1"

[dev-dependencies]
dotenv = "0.15"

[build]
target = "x86_64-unknown-linux-musl"


[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "link-arg=-s", "-C", "link-arg=-static"]
linker = "musl-gcc"



